--- a/API.ipynb
+++ b/API.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -36,9 +36,9 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\zhangyx\\Documents\\idac\\Algorithms\\knapsack/../input.csv\n",
-      "2727.5793640160095\n",
-      "3324.242321708407\n",
-      "Knapsack Solved. Average solving time: 2.3171565532684326s (repetitions count 1, number of instances 1)\n"
+      "3054.8458589975153\n",
+      "2733.2426455449295\n",
+      "Knapsack Solved. Average solving time: 2.4515857696533203s (repetitions count 1, number of instances 1)\n"
      ]
     },
     {
@@ -71,13 +71,13 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>99417913</td>\n",
-       "      <td>82</td>\n",
+       "      <td>72</td>\n",
        "      <td>Electrical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>22075182</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
        "      <td>Electrical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -92,12 +92,12 @@
       ],
       "text/plain": [
        "       GBID  Quantity Material Class\n",
-       "0  99417913        82     Electrical\n",
-       "1  22075182         2     Electrical\n",
+       "0  99417913        72     Electrical\n",
+       "1  22075182         8     Electrical\n",
        "2  89026470         1     Electrical"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,6 +109,167 @@
     "sol_df = transformer.transform_solution(best_sol)\n",
     "sol_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truck_options = ipywidgets.Dropdown(\n",
+    "    options = trucks,\n",
+    "    description = 'Truck: '\n",
+    ")\n",
+    "empty_len = ipywidgets.FloatSlider(\n",
+    "    value = 0.5,\n",
+    "    min = 0,\n",
+    "    max = 1,\n",
+    "    step = 0.05,\n",
+    "    description = 'Length: '\n",
+    ")\n",
+    "empty_wid = ipywidgets.FloatSlider(\n",
+    "    value = 0.5,\n",
+    "    min = 0,\n",
+    "    max = 1,\n",
+    "    step = 0.05,\n",
+    "    description = 'Width: '\n",
+    ")\n",
+    "empty_hei = ipywidgets.FloatSlider(\n",
+    "    value = 0.5,\n",
+    "    min = 0,\n",
+    "    max = 1,\n",
+    "    step = 0.05,\n",
+    "    description = 'Height: '\n",
+    ")\n",
+    "introduction_label = ipywidgets.Label(value='Percentage of Empty Space after Loading: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8590e9871ba64f8cac01d47087142c97",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Truck: ', options=('Transit', 'E350', 'Box Truck', 'Platform'), value='Transit')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(truck_options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8193405e7cf544878106ff65b5b808f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='Percentage of Empty Space after Loading: ')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(introduction_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9cdd98b3ef44894a23db7e6d91ec369",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.5, description='Length: ', max=1.0, step=0.05)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(empty_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "25506c063c8044bca5cf86af98503ccc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.5, description='Height: ', max=1.0, step=0.05)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(empty_hei)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4982d57d82d45b1a92e7936087f0956",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.5, description='Width: ', max=1.0, step=0.05)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(empty_wid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
