finish basic dashboard

--- a/API.ipynb
+++ b/API.ipynb
@@ -3,7 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,14 +27,28 @@
     "import matplotlib.pyplot as plt\n",
     "from bqplot import market_map\n",
     "import traitlets\n",
-    "from IPython.display import clear_output\n",
+    "from IPython.display import clear_output, display\n",
     "from knapsack_problem_solver import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": [
     "trucks = [transit, e350, box_truck, platform]"
@@ -28,136 +56,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\zhangyx\\Documents\\idac\\Algorithms\\knapsack/../input.csv\n",
-      "3054.8458589975153\n",
-      "2733.2426455449295\n",
-      "Knapsack Solved. Average solving time: 2.4515857696533203s (repetitions count 1, number of instances 1)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GBID</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Material Class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>99417913</td>\n",
-       "      <td>72</td>\n",
-       "      <td>Electrical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>22075182</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Electrical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>89026470</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Electrical</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       GBID  Quantity Material Class\n",
-       "0  99417913        72     Electrical\n",
-       "1  22075182         8     Electrical\n",
-       "2  89026470         1     Electrical"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 3,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
     }
-   ],
-   "source": [
-    "rest_percent = [0.5] * 3\n",
-    "solver = KnapsackSolver(KnapsackSolverParser(), platform, rest_percent, True)\n",
-    "best_value, best_sol, transformer = solver.solve()\n",
-    "sol_df = transformer.transform_solution(best_sol)\n",
-    "sol_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   },
    "outputs": [],
    "source": [
     "truck_options = ipywidgets.Dropdown(\n",
     "    options = trucks,\n",
     "    description = 'Truck: '\n",
     ")\n",
+    "style = {'description_width': 'initial'}\n",
     "empty_len = ipywidgets.FloatSlider(\n",
     "    value = 0.5,\n",
     "    min = 0,\n",
     "    max = 1,\n",
     "    step = 0.05,\n",
-    "    description = 'Length: '\n",
+    "    description = 'Empty Length: ',\n",
+    "    style = style\n",
     ")\n",
     "empty_wid = ipywidgets.FloatSlider(\n",
     "    value = 0.5,\n",
     "    min = 0,\n",
     "    max = 1,\n",
     "    step = 0.05,\n",
-    "    description = 'Width: '\n",
+    "    description = 'Empty Width: ',\n",
+    "    style = style\n",
     ")\n",
     "empty_hei = ipywidgets.FloatSlider(\n",
     "    value = 0.5,\n",
     "    min = 0,\n",
     "    max = 1,\n",
     "    step = 0.05,\n",
-    "    description = 'Height: '\n",
+    "    description = 'Empty Height: ',\n",
+    "    style = style\n",
     ")\n",
-    "introduction_label = ipywidgets.Label(value='Percentage of Empty Space after Loading: ')"
+    "# introduction_label = ipywidgets.Textarea('Percentage of Empty Space after Loading: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 4,
+        "height": 4,
+        "hidden": false,
+        "row": 0,
+        "width": 4
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8590e9871ba64f8cac01d47087142c97",
+       "model_id": "b6e1b17739064d7985990df1b5c61265",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Truck: ', options=('Transit', 'E350', 'Box Truck', 'Platform'), value='Transit')"
+       "VBox(children=(VBox(children=(Dropdown(description='Truck: ', options=('Transit', 'E350', 'Box Truck', 'Platfo…"
       ]
      },
      "metadata": {},
@@ -165,114 +145,69 @@
     }
    ],
    "source": [
-    "display(truck_options)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8193405e7cf544878106ff65b5b808f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Label(value='Percentage of Empty Space after Loading: ')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(introduction_label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9cdd98b3ef44894a23db7e6d91ec369",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.5, description='Length: ', max=1.0, step=0.05)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(empty_len)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25506c063c8044bca5cf86af98503ccc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.5, description='Height: ', max=1.0, step=0.05)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(empty_hei)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4982d57d82d45b1a92e7936087f0956",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.5, description='Width: ', max=1.0, step=0.05)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(empty_wid)"
+    "button = ipywidgets.Button(description='Calculate')\n",
+    "output = ipywidgets.Output()\n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    with output:\n",
+    "        clear_output(True)\n",
+    "        print('Calculating...')\n",
+    "        solver = KnapsackSolver(KnapsackSolverParser(), truck_options.value, [empty_len.value, empty_wid.value, empty_hei.value], True)\n",
+    "        best_value, best_sol, transformer = solver.solve()\n",
+    "        sol_df = transformer.transform_solution(best_sol)\n",
+    "        clear_output(True)\n",
+    "        value_display = ipywidgets.HTML(\n",
+    "            value = '<h4>Profit when 100% sold: <b>{0}</b></h4>'.format(best_value)\n",
+    "        )\n",
+    "#         display(ipywidgets.VBox([value_display, sol_df]))\n",
+    "        display(value_display)\n",
+    "        display(sol_df)\n",
+    "\n",
+    "button.on_click(on_button_clicked)\n",
+    "vbox_style = {}\n",
+    "display(ipywidgets.VBox([ipywidgets.VBox([truck_options, empty_len, empty_wid, empty_hei, button]), output]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "extensions": {
+   "jupyter_dashboards": {
+    "activeView": "report_default",
+    "version": 1,
+    "views": {
+     "grid_default": {
+      "cellMargin": 10,
+      "defaultCellHeight": 20,
+      "maxColumns": 12,
+      "name": "grid",
+      "type": "grid"
+     },
+     "report_default": {
+      "name": "report",
+      "type": "report"
+     }
+    }
+   }
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -288,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
