center all the items in dashboard

--- a/API.ipynb
+++ b/API.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -103,12 +103,38 @@
     "    description = 'Empty Height: ',\n",
     "    style = style\n",
     ")\n",
-    "# introduction_label = ipywidgets.Textarea('Percentage of Empty Space after Loading: ')"
+    "title = ipywidgets.HTML(' \\\n",
+    "                       <!DOCTYPE html> \\\n",
+    "                        <html> \\\n",
+    "                        <head> \\\n",
+    "                        <style> \\\n",
+    "                        .center { \\\n",
+    "                            margin: 0 auto; \\\n",
+    "                            max-width: 50%; \\\n",
+    "                            padding: 1.3rem; \\\n",
+    "                        } \\\n",
+    " \\\n",
+    "                        .title-bar { \\\n",
+    "                            background-color: #8497b0; \\\n",
+    "                            color: #ffffff; \\\n",
+    "                        } \\\n",
+    " \\\n",
+    "                        </style> \\\n",
+    "                        </head> \\\n",
+    "                        <body> \\\n",
+    "                        <div class=\"title-bar\"> \\\n",
+    "                            <div class=\"center\"> \\\n",
+    "                              <h3>Truck Distribution Recommendation System</h3> \\\n",
+    "                            </div> \\\n",
+    "                        </div> \\\n",
+    "                        </body> \\\n",
+    "                        </html> \\\n",
+    "                     ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -132,12 +158,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6e1b17739064d7985990df1b5c61265",
+       "model_id": "4fdf2de509534ea68204195e833c781a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(Dropdown(description='Truck: ', options=('Transit', 'E350', 'Box Truck', 'Platfo…"
+       "VBox(children=(HTML(value='                        <!DOCTYPE html>                         <html>             …"
       ]
      },
      "metadata": {},
@@ -145,27 +171,51 @@
     }
    ],
    "source": [
-    "button = ipywidgets.Button(description='Calculate')\n",
+    "button = ipywidgets.Button(description='Calculate', button_style='success')\n",
     "output = ipywidgets.Output()\n",
+    "sol_out = ipywidgets.Output()\n",
     "\n",
     "def on_button_clicked(b):\n",
     "    with output:\n",
     "        clear_output(True)\n",
     "        print('Calculating...')\n",
+    "        clear_output(True)\n",
     "        solver = KnapsackSolver(KnapsackSolverParser(), truck_options.value, [empty_len.value, empty_wid.value, empty_hei.value], True)\n",
     "        best_value, best_sol, transformer = solver.solve()\n",
     "        sol_df = transformer.transform_solution(best_sol)\n",
     "        clear_output(True)\n",
     "        value_display = ipywidgets.HTML(\n",
-    "            value = '<h4>Profit when 100% sold: <b>{0}</b></h4>'.format(best_value)\n",
+    "            value = '<h4>Profit when 100% sold: <b>${0}</b></h4>'.format(best_value)\n",
     "        )\n",
-    "#         display(ipywidgets.VBox([value_display, sol_df]))\n",
-    "        display(value_display)\n",
-    "        display(sol_df)\n",
+    "        \n",
+    "        with sol_out:\n",
+    "            clear_output(True)\n",
+    "            display(sol_df)\n",
+    "        display(ipywidgets.VBox([value_display, sol_out]))\n",
+    "#         display(value_display)\n",
+    "#         display(sol_df)\n",
     "\n",
     "button.on_click(on_button_clicked)\n",
-    "vbox_style = {}\n",
-    "display(ipywidgets.VBox([ipywidgets.VBox([truck_options, empty_len, empty_wid, empty_hei, button]), output]))"
+    "spaces_box = ipywidgets.VBox([empty_len, empty_wid, empty_hei])\n",
+    "user_operation_box = ipywidgets.VBox([truck_options, spaces_box, button])\n",
+    "\n",
+    "layout_center_list = ipywidgets.Layout()\n",
+    "layout_center_list.width = '50%'\n",
+    "layout_center_list.margin= '0 auto'\n",
+    "truck_options.layout = layout_center_list\n",
+    "empty_hei.layout = layout_center_list\n",
+    "empty_len.layout = layout_center_list\n",
+    "empty_wid.layout = layout_center_list\n",
+    "\n",
+    "layout_button = ipywidgets.Layout()\n",
+    "layout_button.width = '50%'\n",
+    "layout_button.margin= '1% auto'\n",
+    "button.style.button_color  = '#8497b0'\n",
+    "button.layout = layout_button\n",
+    "\n",
+    "output.layout = layout_center_list\n",
+    "\n",
+    "display(ipywidgets.VBox([title, user_operation_box, output]))"
    ]
   },
   {
@@ -184,6 +234,13 @@
      }
     }
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -223,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
