--- a/API.ipynb
+++ b/API.ipynb
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cbc16150ea243138cd07196361654c6",
+       "model_id": "642db253e9da4c589a160357fbf78865",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,12 +219,13 @@
     "button = ipywidgets.Button(description='Calculate', button_style='success')\n",
     "output = ipywidgets.Output()\n",
     "sol_out = ipywidgets.Output()\n",
-    "viz = ipywidgets.Output()\n",
+    "pie_candidate_class_distribution = ipywidgets.Output()\n",
+    "pie_profit_contribution_class = ipywidgets.Output()\n",
     "sol_df = None\n",
     "pie_chart_colors = [theme_blue, '#85c5a6', '#cbebb5']\n",
     "                    \n",
     "def on_dataView_clicked(b):\n",
-    "    with viz:\n",
+    "    with pie_profit_contribution_class:\n",
     "        clear_output(True)\n",
     "        labels = list(set(sol_df['Material Class']))\n",
     "        sizes = []\n",
@@ -244,9 +245,9 @@
     "def on_button_clicked(b):\n",
     "    with output:\n",
     "        clear_output(True)\n",
-    "        global viz\n",
-    "        viz = ipywidgets.Output()\n",
-    "        viz.layout = add_top_margin\n",
+    "        global pie_profit_contribution_class\n",
+    "        pie_profit_contribution_class = ipywidgets.Output()\n",
+    "        pie_profit_contribution_class.layout = add_top_margin\n",
     "        display(ipywidgets.HTML(\n",
     "            value = '<h4>Calculating Recommendation...</h4>'\n",
     "        ))\n",
@@ -268,18 +269,18 @@
     "        )\n",
     "        intro_sol_out.layout = add_top_margin\n",
     "        \n",
-    "        show_viz_button = ipywidgets.Button(description='Data Analytics View', button_style='success')\n",
-    "        show_viz_button.on_click(on_dataView_clicked)\n",
-    "        show_viz_button.style.button_color = theme_blue\n",
-    "        show_viz_button.layout = add_top_margin\n",
+    "        show_pie_profit_contribution_class_button = ipywidgets.Button(description='Data Analytics View', button_style='success')\n",
+    "        show_pie_profit_contribution_class_button.on_click(on_dataView_clicked)\n",
+    "        show_pie_profit_contribution_class_button.style.button_color = theme_blue\n",
+    "        show_pie_profit_contribution_class_button.layout = add_top_margin\n",
     "        \n",
-    "        intro_line = ipywidgets.HBox([intro_sol_out, show_viz_button])\n",
+    "        intro_line = ipywidgets.HBox([intro_sol_out, show_pie_profit_contribution_class_button])\n",
     "        intro_line.layout = two_opposite_side\n",
     "        \n",
     "        with sol_out:\n",
     "            clear_output(True)\n",
     "            display(sol_df)\n",
-    "        display(ipywidgets.VBox([value_display, intro_line, sol_out, viz]))\n",
+    "        display(ipywidgets.VBox([value_display, intro_line, sol_out, pie_profit_contribution_class]))\n",
     "\n",
     "button.on_click(on_button_clicked)\n",
     "\n",
@@ -345,7 +346,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-afef30cf3dc5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'GMR'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-7-afef30cf3dc5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'GMR'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
      ]
     }
@@ -410,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
