--- a/API.ipynb
+++ b/API.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "branch_options = ipywidgets.Dropdown(\n",
     "    options = branches,\n",
-    "    description = 'Branch: '\n",
+    "    description = 'Center: '\n",
     ")\n",
     "truck_options = ipywidgets.Dropdown(\n",
     "    options = trucks,\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -163,7 +163,7 @@
     "\n",
     "whole_layout_center = ipywidgets.Layout()\n",
     "whole_layout_center.width = '100%'\n",
-    "whole_layout_center.margin = '0 auto'\n",
+    "whole_layout_center.margin = '1.5% auto'\n",
     "\n",
     "layout_button = ipywidgets.Layout()\n",
     "layout_button.width = '50%'\n",
@@ -179,7 +179,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "button = ipywidgets.Button(description='Calculate', button_style='success')\n",
+    "output = ipywidgets.Output()\n",
+    "sol_out = ipywidgets.Output()\n",
+    "data_out = ipywidgets.Output()\n",
+    "input_df = None\n",
+    "sol_df = None\n",
+    "pie_chart_colors = [theme_blue, '#85c5a6', '#cbebb5']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def on_dataView_clicked(b):\n",
+    "    with data_out:\n",
+    "        clear_output(True)\n",
+    "        pie_candidate_class_distribution = ipywidgets.Output()\n",
+    "        pie_space_taken_class = ipywidgets.Output()\n",
+    "        pie_profit_contribution_class = ipywidgets.Output()\n",
+    "        \n",
+    "        with pie_candidate_class_distribution:\n",
+    "            # candidate list material class distribution pie chart\n",
+    "            clear_output(True)\n",
+    "            labels = list(set(input_df['Material Class']))\n",
+    "            class_size = input_df.groupby('Material Class')['Material Class'].size()\n",
+    "            sizes = [class_size[label] for label in labels]\n",
+    "            fig1, ax1 = plt.subplots()\n",
+    "            ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
+    "                    shadow=True, startangle=0, colors=pie_chart_colors)\n",
+    "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+    "            ax1.set_title('Candidate Products Distribution by Material Class')\n",
+    "            plt.show()\n",
+    "            \n",
+    "        with pie_space_taken_class:\n",
+    "            # algo solution material class space taken pie chart\n",
+    "            clear_output(True)\n",
+    "            labels = list(set(sol_df['Material Class']))\n",
+    "            sizes = []\n",
+    "            for label in labels:\n",
+    "                materials = list(sol_df[sol_df['Material Class'] == label]['GBID'])\n",
+    "                space = 0\n",
+    "                for gbid in materials:\n",
+    "                    row = input_df[input_df['GBID'] == gbid]\n",
+    "                    space += float(row['Length']) * float(row['Width']) * float(row['Height'])\n",
+    "                sizes.append(space)\n",
+    "            fig1, ax1 = plt.subplots()\n",
+    "            ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
+    "                    shadow=True, startangle=0, colors=pie_chart_colors)\n",
+    "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+    "            ax1.set_title('Solution: Space Taken by Material Class')\n",
+    "            plt.show()\n",
+    "        \n",
+    "        with pie_profit_contribution_class:\n",
+    "            # algo solution material class conotribution of profit pie chart\n",
+    "            clear_output(True)\n",
+    "            labels = list(set(sol_df['Material Class']))\n",
+    "            sizes = []\n",
+    "            for label in labels:\n",
+    "                tmp_df = sol_df[sol_df['Material Class'] == label].reset_index()\n",
+    "                profit = 0\n",
+    "                for i in range(len(tmp_df)):\n",
+    "                    profit += tmp_df.iloc[i]['Quantity'] * tmp_df.iloc[i]['Unit Profit']\n",
+    "                sizes.append(profit)\n",
+    "            fig1, ax1 = plt.subplots()\n",
+    "            ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
+    "                    shadow=True, startangle=0, colors=pie_chart_colors)\n",
+    "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+    "            ax1.set_title('Solution: Profit Contribution by Material Class')\n",
+    "            plt.show()\n",
+    "        \n",
+    "        original_sol_pie = ipywidgets.HBox([pie_candidate_class_distribution, pie_space_taken_class, pie_profit_contribution_class])\n",
+    "        original_sol_pie.layout = two_opposite_side\n",
+    "        \n",
+    "        data_view_title = ipywidgets.HTML(\n",
+    "            value =  '<div align=\"center\" style=\"border:1px solid {0}\"> \\\n",
+    "                <h4 style=\"color: black\">Visualizations for Algorithm Solution</h4> \\\n",
+    "            </div>'.format(theme_blue)\n",
+    "        )\n",
+    "        data_view_title.layout = layout_center_list\n",
+    "        \n",
+    "        data_view = ipywidgets.VBox([data_view_title, original_sol_pie])\n",
+    "        display(data_view)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -203,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "642db253e9da4c589a160357fbf78865",
+       "model_id": "350c441187674f83bd25b3604b234022",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,43 +332,32 @@
     }
    ],
    "source": [
-    "button = ipywidgets.Button(description='Calculate', button_style='success')\n",
-    "output = ipywidgets.Output()\n",
-    "sol_out = ipywidgets.Output()\n",
-    "pie_candidate_class_distribution = ipywidgets.Output()\n",
-    "pie_profit_contribution_class = ipywidgets.Output()\n",
-    "sol_df = None\n",
-    "pie_chart_colors = [theme_blue, '#85c5a6', '#cbebb5']\n",
-    "                    \n",
-    "def on_dataView_clicked(b):\n",
-    "    with pie_profit_contribution_class:\n",
-    "        clear_output(True)\n",
-    "        labels = list(set(sol_df['Material Class']))\n",
-    "        sizes = []\n",
-    "        for label in labels:\n",
-    "            tmp_df = sol_df[sol_df['Material Class'] == label].reset_index()\n",
-    "            profit = 0\n",
-    "            for i in range(len(tmp_df)):\n",
-    "                profit += tmp_df.iloc[i]['Quantity'] * tmp_df.iloc[i]['Unit Profit']\n",
-    "            sizes.append(profit)\n",
-    "        fig1, ax1 = plt.subplots()\n",
-    "        ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
-    "                shadow=True, startangle=0, colors=pie_chart_colors)\n",
-    "        ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
-    "        ax1.set_title('Profit Contribution by Material Class')\n",
-    "        plt.show()\n",
-    "\n",
     "def on_button_clicked(b):\n",
     "    with output:\n",
+    "        # clear all previous output display\n",
     "        clear_output(True)\n",
-    "        global pie_profit_contribution_class\n",
-    "        pie_profit_contribution_class = ipywidgets.Output()\n",
-    "        pie_profit_contribution_class.layout = add_top_margin\n",
-    "        display(ipywidgets.HTML(\n",
-    "            value = '<h4>Calculating Recommendation...</h4>'\n",
-    "        ))\n",
-    "        solver = KnapsackSolver(KnapsackSolverParser(), truck_options.value, [empty_len.value, empty_wid.value, empty_hei.value], True)\n",
-    "        best_value, best_sol, transformer = solver.solve()\n",
+    "        global data_out\n",
+    "        data_out = ipywidgets.Output()\n",
+    "        data_out.layout = whole_layout_center\n",
+    "        \n",
+    "        intermediate_out = ipywidgets.Output()\n",
+    "        intermediate_out.layout = layout_center_list\n",
+    "        with intermediate_out:\n",
+    "            display(ipywidgets.HTML(\n",
+    "                value = '<h4>Calculating Recommendation...</h4>'\n",
+    "            ))\n",
+    "\n",
+    "            solver = KnapsackSolver(KnapsackSolverParser(), truck_options.value, [empty_len.value, empty_wid.value, empty_hei.value], True)\n",
+    "            transformer = solver.transformer\n",
+    "\n",
+    "            global input_df\n",
+    "            input_df = transformer.df\n",
+    "            input_df = input_df[['Material', 'Material Class', 'GMR for Reporting', 'Unit_profit', 'Length', 'Width', 'Height']]\n",
+    "            input_df = input_df.rename(columns={'GMR for Reporting': 'GMR', 'Unit_profit': 'Unit Profit', 'Material': 'GBID'})\n",
+    "            display(input_df)\n",
+    "        display(intermediate_out)\n",
+    "        \n",
+    "        best_value, best_sol = solver.solve()\n",
     "        global sol_df\n",
     "        sol_df = transformer.transform_solution(best_sol)\n",
     "        \n",
@@ -263,6 +368,7 @@
     "                <h4 style=\"color: black\">Profit when 100% sold: <b>${0}</b></h4> \\\n",
     "            </div>'.format(best_value, theme_blue)\n",
     "        )\n",
+    "        value_display.layout = layout_center_list\n",
     "        \n",
     "        intro_sol_out = ipywidgets.HTML(\n",
     "            value = '<h4>Recommendation of products : </h4>'\n",
@@ -274,13 +380,23 @@
     "        show_pie_profit_contribution_class_button.style.button_color = theme_blue\n",
     "        show_pie_profit_contribution_class_button.layout = add_top_margin\n",
     "        \n",
-    "        intro_line = ipywidgets.HBox([intro_sol_out, show_pie_profit_contribution_class_button])\n",
-    "        intro_line.layout = two_opposite_side\n",
-    "        \n",
     "        with sol_out:\n",
     "            clear_output(True)\n",
     "            display(sol_df)\n",
-    "        display(ipywidgets.VBox([value_display, intro_line, sol_out, pie_profit_contribution_class]))\n",
+    "            \n",
+    "        intro_line = ipywidgets.HBox([ipywidgets.VBox([intro_sol_out, sol_out]), show_pie_profit_contribution_class_button])\n",
+    "        intro_line.layout = two_opposite_side\n",
+    "        \n",
+    "        regular_sol_display = ipywidgets.VBox([\n",
+    "            value_display, \n",
+    "            intro_line\n",
+    "        ])\n",
+    "        regular_sol_display.layout = whole_layout_center\n",
+    "            \n",
+    "        display(ipywidgets.VBox([\n",
+    "            regular_sol_display,\n",
+    "            data_out\n",
+    "        ]))\n",
     "\n",
     "button.on_click(on_button_clicked)\n",
     "\n",
@@ -296,14 +412,12 @@
     "button.style.button_color  = theme_blue\n",
     "button.layout = layout_button\n",
     "\n",
-    "output.layout = layout_center_list\n",
-    "\n",
     "display(ipywidgets.VBox([title, user_operation_box, output]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -318,43 +432,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "sol_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {},
-       "report_default": {
-        "hidden": false
-       }
-      }
-     }
-    }
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'NoneType' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-afef30cf3dc5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'GMR'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(sol_df)):\n",
-    "    print(sol_df.iloc[i]['GMR'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
