--- a/API.ipynb
+++ b/API.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -161,9 +161,13 @@
     "layout_center_list.width = '50%'\n",
     "layout_center_list.margin= '0.1% auto'\n",
     "\n",
+    "layout_center_subtitle = ipywidgets.Layout()\n",
+    "layout_center_subtitle.width = '50%'\n",
+    "layout_center_subtitle.margin= '2% auto'\n",
+    "\n",
     "whole_layout_center = ipywidgets.Layout()\n",
     "whole_layout_center.width = '100%'\n",
-    "whole_layout_center.margin = '1.5% auto'\n",
+    "whole_layout_center.margin = '1% auto'\n",
     "\n",
     "layout_button = ipywidgets.Layout()\n",
     "layout_button.width = '50%'\n",
@@ -179,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -287,7 +291,7 @@
     "                <h4 style=\"color: black\">Visualizations for Algorithm Solution</h4> \\\n",
     "            </div>'.format(theme_blue)\n",
     "        )\n",
-    "        data_view_title.layout = layout_center_list\n",
+    "        data_view_title.layout = layout_center_subtitle\n",
     "        \n",
     "        data_view = ipywidgets.VBox([data_view_title, original_sol_pie])\n",
     "        display(data_view)"
@@ -295,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -319,7 +323,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "350c441187674f83bd25b3604b234022",
+       "model_id": "909c0704d0a34fc281f48e6bfb43cd88",
        "version_major": 2,
        "version_minor": 0
       },
