--- a/API.ipynb
+++ b/API.ipynb
@@ -25,7 +25,6 @@
     "import bqplot\n",
     "import ipywidgets\n",
     "import matplotlib.pyplot as plt\n",
-    "from bqplot import market_map\n",
     "import traitlets\n",
     "from IPython.display import clear_output, display\n",
     "from knapsack_problem_solver import *"
@@ -161,6 +160,11 @@
     "layout_center_list.width = '50%'\n",
     "layout_center_list.margin= '0.1% auto'\n",
     "\n",
+    "bar = ipywidgets.Layout()\n",
+    "bar.display = 'flex'\n",
+    "bar.justify_content = 'center'\n",
+    "bar.flex_flow = 'row nowrap'\n",
+    "\n",
     "layout_center_subtitle = ipywidgets.Layout()\n",
     "layout_center_subtitle.width = '50%'\n",
     "layout_center_subtitle.margin= '2% auto'\n",
@@ -232,6 +236,7 @@
     "        pie_candidate_class_distribution = ipywidgets.Output()\n",
     "        pie_space_taken_class = ipywidgets.Output()\n",
     "        pie_profit_contribution_class = ipywidgets.Output()\n",
+    "        bar_item_chosen = ipywidgets.Output()\n",
     "        \n",
     "        with pie_candidate_class_distribution:\n",
     "            # candidate list material class distribution pie chart\n",
@@ -282,6 +287,25 @@
     "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
     "            ax1.set_title('Solution: Profit Contribution by Material Class')\n",
     "            plt.show()\n",
+    "            \n",
+    "        with bar_item_chosen:\n",
+    "            # bar chart used to show which items are chosen\n",
+    "            clear_output(True)\n",
+    "            materials = list(input_df['GBID'])\n",
+    "            labels = ['Unit Profit', 'Volume (Cubic Inch)']\n",
+    "            pos = np.arange(len(materials))\n",
+    "            bar_width = 0.35\n",
+    "            unit_profits = list(input_df['Unit Profit'])\n",
+    "            volumes = list(input_df['Length'] * input_df['Width'] * input_df['Height'] / 1000000000)\n",
+    "            \n",
+    "            plt.bar(pos, unit_profits, bar_width, color='blue', edgecolor='black')\n",
+    "            plt.bar(pos+bar_width, volumes, bar_width, color='pink', edgecolor='black')\n",
+    "            plt.xticks(pos, materials)\n",
+    "            plt.xlabel('GBID', fontsize=16)\n",
+    "            plt.ylabel('Material Information', fontsize=16)\n",
+    "            plt.title('Material Information', fontsize=18)\n",
+    "            plt.legend(labels, loc=2)\n",
+    "            plt.show()\n",
     "        \n",
     "        original_sol_pie = ipywidgets.HBox([pie_candidate_class_distribution, pie_space_taken_class, pie_profit_contribution_class])\n",
     "        original_sol_pie.layout = two_opposite_side\n",
@@ -293,7 +317,10 @@
     "        )\n",
     "        data_view_title.layout = layout_center_subtitle\n",
     "        \n",
-    "        data_view = ipywidgets.VBox([data_view_title, original_sol_pie])\n",
+    "        bar_item_chosen.layout = bar\n",
+    "        \n",
+    "        data_view = ipywidgets.VBox([data_view_title, original_sol_pie, bar_item_chosen])\n",
+    "#         data_view.layout = bar\n",
     "        display(data_view)"
    ]
   },
@@ -323,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f326ef4fb1b9425ca5934a420310ef61",
+       "model_id": "1fd2aad3a12c425a8f64b8ee10c0038e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,19 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {},
-       "report_default": {
-        "hidden": true
-       }
-      }
-     }
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
