figure size not change

--- a/API.ipynb
+++ b/API.ipynb
@@ -161,7 +161,7 @@
     "layout_center_list.margin= '0.1% auto'\n",
     "\n",
     "bar = ipywidgets.Layout()\n",
-    "bar.display = 'flex'\n",
+    "# bar.display = 'flex'\n",
     "bar.justify_content = 'center'\n",
     "bar.flex_flow = 'row nowrap'\n",
     "\n",
@@ -294,17 +294,22 @@
     "            materials = list(input_df['GBID'])\n",
     "            labels = ['Unit Profit', 'Volume (Cubic Inch)']\n",
     "            pos = np.arange(len(materials))\n",
-    "            bar_width = 0.35\n",
+    "            width = 1\n",
     "            unit_profits = list(input_df['Unit Profit'])\n",
     "            volumes = list(input_df['Length'] * input_df['Width'] * input_df['Height'] / 1000000000)\n",
     "            \n",
-    "            plt.bar(pos, unit_profits, bar_width, color='blue', edgecolor='black')\n",
-    "            plt.bar(pos+bar_width, volumes, bar_width, color='pink', edgecolor='black')\n",
-    "            plt.xticks(pos, materials)\n",
-    "            plt.xlabel('GBID', fontsize=16)\n",
-    "            plt.ylabel('Material Information', fontsize=16)\n",
-    "            plt.title('Material Information', fontsize=18)\n",
-    "            plt.legend(labels, loc=2)\n",
+    "            fig, ax = plt.subplots()\n",
+    "            plt.figure(figsize = (100, 10), dpi=80)\n",
+    "            rects1 = ax.bar(pos - width/2, unit_profits, width, label=labels[0])\n",
+    "            rects2 = ax.bar(pos + width/2, volumes, width, label=labels[1])\n",
+    "\n",
+    "            # Add some text for labels, title and custom x-axis tick labels, etc.\n",
+    "            ax.set_ylabel('Material Information')\n",
+    "            ax.set_yscale('log')\n",
+    "            ax.set_title('Information for Chosen Materials')\n",
+    "            ax.set_xticks(pos)\n",
+    "            ax.set_xticklabels(materials, rotation='vertical')\n",
+    "            ax.legend()\n",
     "            plt.show()\n",
     "        \n",
     "        original_sol_pie = ipywidgets.HBox([pie_candidate_class_distribution, pie_space_taken_class, pie_profit_contribution_class])\n",
@@ -344,13 +349,14 @@
        }
       }
      }
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fd2aad3a12c425a8f64b8ee10c0038e",
+       "model_id": "ed35839107f6455b837832a0edd38858",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -463,12 +469,26 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "input_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": []
   }
