--- a/API.ipynb
+++ b/API.ipynb
@@ -62,9 +62,61 @@
      "jupyter_dashboards": {
       "version": 1,
       "views": {
-       "grid_default": {
+       "grid_default": {},
+       "report_default": {
         "hidden": true
-       },
+       }
+      }
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# CSS\n",
+    "\n",
+    "# theme_blue = '#8497b0'\n",
+    "theme_blue = '#005282'\n",
+    "\n",
+    "layout_center_list = ipywidgets.Layout()\n",
+    "layout_center_list.width = '50%'\n",
+    "layout_center_list.margin= '0.1% auto'\n",
+    "\n",
+    "bar = ipywidgets.Layout()\n",
+    "# bar.display = 'flex'\n",
+    "bar.justify_content = 'center'\n",
+    "bar.flex_flow = 'row nowrap'\n",
+    "\n",
+    "layout_center_subtitle = ipywidgets.Layout()\n",
+    "layout_center_subtitle.width = '50%'\n",
+    "layout_center_subtitle.margin= '2% auto'\n",
+    "\n",
+    "whole_layout_center = ipywidgets.Layout()\n",
+    "whole_layout_center.width = '100%'\n",
+    "whole_layout_center.margin = '1% auto'\n",
+    "\n",
+    "layout_button = ipywidgets.Layout()\n",
+    "layout_button.width = '50%'\n",
+    "layout_button.margin = '1% auto'\n",
+    "\n",
+    "two_opposite_side = ipywidgets.Layout()\n",
+    "two_opposite_side.display = 'flex'\n",
+    "two_opposite_side.justify_content = 'space-between'\n",
+    "\n",
+    "add_top_margin = ipywidgets.Layout()\n",
+    "add_top_margin.margin = '5% 0% 0.1%'\n",
+    "\n",
+    "style = {'description_width': 'initial'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
        "report_default": {
         "hidden": true
        }
@@ -78,11 +130,12 @@
     "    options = branches,\n",
     "    description = 'Center: '\n",
     ")\n",
+    "\n",
     "truck_options = ipywidgets.Dropdown(\n",
     "    options = trucks,\n",
     "    description = 'Truck: '\n",
     ")\n",
-    "style = {'description_width': 'initial'}\n",
+    "\n",
     "empty_len = ipywidgets.FloatSlider(\n",
     "    value = 0.5,\n",
     "    min = 0,\n",
@@ -119,7 +172,7 @@
     "                        } \\\n",
     " \\\n",
     "                        .title-bar { \\\n",
-    "                            background-color: #8497b0; \\\n",
+    "                            background-color: #005282; \\\n",
     "                            color: #ffffff; \\\n",
     "                        } \\\n",
     " \\\n",
@@ -134,55 +187,6 @@
     "                        </body> \\\n",
     "                        </html> \\\n",
     "                     ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {},
-       "report_default": {
-        "hidden": true
-       }
-      }
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "theme_blue = '#8497b0'\n",
-    "\n",
-    "layout_center_list = ipywidgets.Layout()\n",
-    "layout_center_list.width = '50%'\n",
-    "layout_center_list.margin= '0.1% auto'\n",
-    "\n",
-    "bar = ipywidgets.Layout()\n",
-    "# bar.display = 'flex'\n",
-    "bar.justify_content = 'center'\n",
-    "bar.flex_flow = 'row nowrap'\n",
-    "\n",
-    "layout_center_subtitle = ipywidgets.Layout()\n",
-    "layout_center_subtitle.width = '50%'\n",
-    "layout_center_subtitle.margin= '2% auto'\n",
-    "\n",
-    "whole_layout_center = ipywidgets.Layout()\n",
-    "whole_layout_center.width = '100%'\n",
-    "whole_layout_center.margin = '1% auto'\n",
-    "\n",
-    "layout_button = ipywidgets.Layout()\n",
-    "layout_button.width = '50%'\n",
-    "layout_button.margin = '1% auto'\n",
-    "\n",
-    "two_opposite_side = ipywidgets.Layout()\n",
-    "two_opposite_side.display = 'flex'\n",
-    "two_opposite_side.justify_content = 'space-between'\n",
-    "\n",
-    "add_top_margin = ipywidgets.Layout()\n",
-    "add_top_margin.margin = '5% 0% 0.1%'"
    ]
   },
   {
@@ -209,7 +213,15 @@
     "data_out = ipywidgets.Output()\n",
     "input_df = None\n",
     "sol_df = None\n",
-    "pie_chart_colors = [theme_blue, '#85c5a6', '#cbebb5']"
+    "# pie_chart_colors = [theme_blue, '#cbebb5', '#85c5a6']\n",
+    "# pie_chart_colors = ['#dae3f3', '#5b9bd5', '#deebf7']\n",
+    "pie_chart_colors = ['#1595d3', '#f6d221', theme_blue]\n",
+    "color_map_material_class = {\n",
+    "    'Electrical': '#1595d3',\n",
+    "    'MRO': '#f6d221',\n",
+    "    'Commdata': theme_blue\n",
+    "}\n",
+    "light_grey = '#C0C0C0'"
    ]
   },
   {
@@ -245,8 +257,9 @@
     "            class_size = input_df.groupby('Material Class')['Material Class'].size()\n",
     "            sizes = [class_size[label] for label in labels]\n",
     "            fig1, ax1 = plt.subplots()\n",
+    "            colors = [color_map_material_class[label] for label in labels]\n",
     "            ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
-    "                    shadow=True, startangle=0, colors=pie_chart_colors)\n",
+    "                    shadow=True, startangle=0, colors=colors)\n",
     "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
     "            ax1.set_title('Candidate Products Distribution by Material Class')\n",
     "            plt.show()\n",
@@ -264,8 +277,9 @@
     "                    space += float(row['Length']) * float(row['Width']) * float(row['Height'])\n",
     "                sizes.append(space)\n",
     "            fig1, ax1 = plt.subplots()\n",
+    "            colors = [color_map_material_class[label] for label in labels]\n",
     "            ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
-    "                    shadow=True, startangle=0, colors=pie_chart_colors)\n",
+    "                    shadow=True, startangle=0, colors=colors)\n",
     "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
     "            ax1.set_title('Solution: Space Taken by Material Class')\n",
     "            plt.show()\n",
@@ -282,8 +296,9 @@
     "                    profit += tmp_df.iloc[i]['Quantity'] * tmp_df.iloc[i]['Unit Profit']\n",
     "                sizes.append(profit)\n",
     "            fig1, ax1 = plt.subplots()\n",
+    "            colors = [color_map_material_class[label] for label in labels]\n",
     "            ax1.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
-    "                    shadow=True, startangle=0, colors=pie_chart_colors)\n",
+    "                    shadow=True, startangle=0, colors=colors)\n",
     "            ax1.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
     "            ax1.set_title('Solution: Profit Contribution by Material Class')\n",
     "            plt.show()\n",
@@ -292,16 +307,34 @@
     "            # bar chart used to show which items are chosen\n",
     "            clear_output(True)\n",
     "            materials = list(input_df['GBID'])\n",
+    "            chosen_materials = set(sol_df['GBID'])\n",
     "            labels = ['Unit Profit', 'Volume (Cubic Inch)']\n",
     "            pos = np.arange(len(materials))\n",
-    "            width = 1\n",
+    "            width = 0.35\n",
     "            unit_profits = list(input_df['Unit Profit'])\n",
     "            volumes = list(input_df['Length'] * input_df['Width'] * input_df['Height'] / 1000000000)\n",
     "            \n",
+    "            if materials[0] not in chosen_materials:\n",
+    "                for i in range(1, len(materials)):\n",
+    "                    if materials[i] in chosen_materials:\n",
+    "                        break\n",
+    "                materials[0], materials[i] = materials[i], materials[0]\n",
+    "                unit_profits[0], unit_profits[i] = unit_profits[i], unit_profits[0]\n",
+    "                volumes[0], volumes[i] = volumes[i], volumes[0]\n",
+    "            \n",
     "            fig, ax = plt.subplots()\n",
-    "            plt.figure(figsize = (100, 10), dpi=80)\n",
-    "            rects1 = ax.bar(pos - width/2, unit_profits, width, label=labels[0])\n",
-    "            rects2 = ax.bar(pos + width/2, volumes, width, label=labels[1])\n",
+    "#             plt.figure(figsize = (100, 10), dpi=80)\n",
+    "            rects = []\n",
+    "            rects.append(plt.bar(pos - width/2, unit_profits, width, label=labels[0]))\n",
+    "            rects.append(plt.bar(pos + width/2, volumes, width, label=labels[1]))\n",
+    "\n",
+    "            for i, gbid in enumerate(materials):\n",
+    "                if gbid in chosen_materials:\n",
+    "                    for j in range(2):\n",
+    "                        rects[j][i].set_color(pie_chart_colors[j])\n",
+    "                else:\n",
+    "                    for j in range(2):\n",
+    "                        rects[j][i].set_color(light_grey)\n",
     "\n",
     "            # Add some text for labels, title and custom x-axis tick labels, etc.\n",
     "            ax.set_ylabel('Material Information')\n",
@@ -356,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed35839107f6455b837832a0edd38858",
+       "model_id": "085d42e05a5241108c20af32f4eda197",
        "version_major": 2,
        "version_minor": 0
       },
@@ -450,27 +483,6 @@
     "button.layout = layout_button\n",
     "\n",
     "display(ipywidgets.VBox([title, user_operation_box, output]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {},
-       "report_default": {
-        "hidden": true
-       }
-      }
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "input_df"
    ]
   },
   {
